@@ -287,67 +287,67 @@ text_entry_populate_popup (GtkEntry *entry, GtkMenu *menu, gpointer data)
 
 	item = gtk_image_menu_item_new_with_label (_("Black"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (1, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 1);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (1));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Dark Blue"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (2, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 2);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (2));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Dark Green"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (3, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 3);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (3));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Red"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (4, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 4);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (4));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Brown"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (5, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 5);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (5));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Purple"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (6, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 6);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (6));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Orange"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (7, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 7);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (7));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Yellow"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (8, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 8);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (8));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Light Green"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (9, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 9);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (9));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Aqua"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (10, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 10);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (10));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Light Blue"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (11, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 11);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (11));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Blue"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (12, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 12);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (12));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Violet"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (13, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 13);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (13));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Grey"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (14, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 14);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (14));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("Light Grey"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (15, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 15);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (15));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 	item = gtk_image_menu_item_new_with_label (_("White"));
 	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (item), get_color_icon (0, gtk_widget_get_style (item)));
-	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), (gpointer) 0);
+	g_signal_connect (G_OBJECT (item), "activate", G_CALLBACK (color_code_activate), GINT_TO_POINTER (0));
 	gtk_menu_shell_append (GTK_MENU_SHELL (submenu), item);
 
 	gtk_widget_show_all (submenu);
@@ -555,7 +555,7 @@ get_color_icon (int c, GtkStyle *style)
 static void
 color_code_activate (GtkMenuItem *item, gpointer data)
 {
-	int color = (int) data;
+	int color = GPOINTER_TO_INT (data);
 	char *code = g_strdup_printf ("%%C%d", color);
 	int position = gtk_editable_get_position (GTK_EDITABLE (gui.text_entry));
 	gtk_editable_insert_text (GTK_EDITABLE (gui.text_entry), code, strlen (code), &position);
